--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="informações_pessoais">
-        <img src="Fotos Profissionais/_MG_8569.JPG" class="foto_perfil">
+        <img src="fotos/_MG_8569.JPG" class="foto_perfil">
         <p class="dados_pessoais">
             Nome: Henry Gabriel Delgobo Estefani<br>Nome Artístico: Henry Delgobo<br>Idade: 21<br>Data De Nascimento: 10/01/2003<br>Sexo: Masculino<br>Nasceu: Ponta Grossa – Paraná<br>Mora: Curitiba – Paraná<br>Estado Civil: Solteiro<br>Escolaridade: Ensino Médio Completo<br>Contato: (42) 9 8406-8145 (Whatsapp) ou henrydelgobo@gmail.com (email particular)
         </p>
@@ -17,10 +17,10 @@
         <p class="biografia1">
             Biografia<br>Com uma trajetória sólida no teatro e uma paixão por contar histórias, eu, Henry Delgobo, sou um ator dedicado com 4 anos de experiência em cursos de teatro. Iniciei minha formação no Teatro Atuarte, onde participei de um curso gratuito para iniciantes. A busca por aprimoramento me levou ao Teatro Lala Schneider em Curitiba, o mais renomado teatro do Paraná, onde completei um curso profissionalizante de 3 anos. Durante minha formação, atuei em 8 peças, desenvolvendo uma capacidade excepcional de memorizar roteiros e marcações rapidamente. Tenho habilidades de improvisação, criando marcações na hora quando necessário, sempre com a aprovação do diretor. Além de minha experiência como ator, também sou roteirista, com 11 roteiros de filmes já escritos porem ainda nenhum lançado. Meu objetivo é expandir minha carreira para o audiovisual, sem deixar de lado o palco. Estou ansioso para explorar novos públicos e desafios no cinema e na televisão, trazendo a mesma dedicação e paixão que tenho pelo teatro.
         </p>
-        <img src="Fotos Profissionais/_MG_8751.JPG" class="foto1">
+        <img src="fotos/_MG_8751.JPG" class="foto1">
     </div>
     <div class="redes_sociais">
-        <img src="Fotos Profissionais/_MG_8960.JPG" class="foto2">
+        <img src="fotos/_MG_8960.JPG" class="foto2">
         <p class="links">
             Redes Sociais<br>- Instagram: @henrydelgobo<br>Link:<br>https://www.instagram.com/henrydelgobo/<br>- Tik Tok: @henrydelgobo53<br>Link: https://tiktok.com/@henrydelgobo53<br>- Elenco Digital: Henry Delgobo
         </p>
@@ -29,10 +29,10 @@
         <p class="Características1">
             Características Físicas<br>- Altura: 1.65<br>- Peso: 66<br>- Calçado: 41<br>- Manequim/Tamanho: 42<br>- Camisa: G<br>- Cor dos Olhos: Azul<br>- Cor dos Cabelos: Loiro<br>- Informações Adicionais: Eu sou cardíaco, tenho uma cirurgia no meu peito!<br>- Sotaque Natural: Sulista
         </p>
-        <img src="Fotos Profissionais/_MG_8768.JPG" class="foto3">
+        <img src="fotos/_MG_8768.JPG" class="foto3">
     </div>
     <div class="redes_sociais">
-        <img src="Fotos Profissionais/_MG_8680.JPG" class="foto2">
+        <img src="fotos/_MG_8680.JPG" class="foto2">
         <p class="links">
             Habilidades<br>- Baterista (Instrumento)<br>- Cantor Gospel<br>- Comediante (Amador, faço algumas piadas mas não profissionalmente)<br>- Compositor<br>- Roteirista<br>- Entendo um pouco de computador (T.I, programador...)
         </p>
@@ -41,10 +41,10 @@
         <p class="Características1">
             Peças Teatrais<br>- Peça: Uma viagem estranha<br>- Personagem: Super-Herói<br>- Ano: 2019<br>- Direção: Karina Rozek<br>- Teatro: Atuarte<br>- Sinopse: Em "Uma Viagem Estranha", um super-herói improvável une forças com um motorista particular e um excêntrico aliado com superpoderes. Juntos, eles embarcam em uma jornada surreal para enfrentar um traficante perigoso e seu aliado alienígena. Esta peça mistura ação, comédia e suspense, explorando o poder da amizade e a coragem necessária para confrontar inimigos de outro mundo. Uma aventura cativante que desafia as expectativas e leva o público a uma viagem verdadeiramente fora do comum.
         </p>
-        <img src="Fotos Profissionais/_MG_8889.JPG" class="foto3">
+        <img src="fotos/_MG_8889.JPG" class="foto3">
     </div>
     <div class="redes_sociais">
-        <img src="Fotos Profissionais/_MG_9105.JPG" class="foto2">
+        <img src="fotos/_MG_9105.JPG" class="foto2">
         <p class="links">
             - Peça: João e Maria<br>- Personagem: João<br>- Ano: 2019<br>- Direção: Karina Rozek<br>- Teatro: Atuarte<br>- Sinopse: Após perderem seus pais para uma bruxa maligna na infância, João e Maria crescem determinados a vingá-los. Transformados em habilidosos caçadores de bruxas, eles dedicam suas vidas a rastrear e eliminar essas criaturas sombrias. A missão mais importante e perigosa, porém, é encontrar e destruir a bruxa responsável pela morte de seus pais. Uma história de vingança, coragem e laços familiares, "João e Maria" é uma emocionante jornada contra o mal.
         </p>
@@ -53,7 +53,7 @@
         <p class="Características1">
             - Peça: Como irritar uma pessoa<br>- Personagem: Homem da plateia e narrador<br>- Ano: 2021<br>- Direção: Fernanda Bahl<br>- Teatro: Lala Schneider<br>- Sinopse: "Como Irritar uma Pessoa" é uma peça composta por esquetes hilariantes, cada uma explorando diferentes e criativas formas de irritar alguém. Com situações cotidianas exageradas e personagens caricatos, cada cena revela os pequenos e grandes aborrecimentos que todos enfrentamos. Desde interrupções incessantes e barulhos irritantes até mal-entendidos absurdos, a peça oferece uma divertida e perspicaz visão dos comportamentos humanos que testam nossa paciência. Prepare-se para rir e se reconhecer nas mais diversas maneiras de perder a calma!
         </p>
-        <img src="Fotos Profissionais/_MG_8793.JPG" class="foto3">
+        <img src="fotos/_MG_8793.JPG" class="foto3">
     </div>
     <div class="redes_sociais">
         <img src="posters/ta inverno no inferno.jpg" class="foto2">
